updated networking code to use java.net.http instead of incubator.httpclient