@@ -1,3 +1,3 @@
 module http.client.demo{
-    requires jdk.incubator.httpclient;
+    requires java.net.http;
 }
